--- a/src/assets/sidebar.css
+++ b/src/assets/sidebar.css
@@ -11,7 +11,7 @@
   height: 100%;
   z-index: 800;
   position: fixed;
-  /* background-color: var(--background-color); */
+  background-color: var(--background-color);
   /* box-shadow: rgba(149, 157, 165, 0.1) 0px 8px 24px; */
 }
 
