--- a/src/assets/projects.css
+++ b/src/assets/projects.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* background-color: rebeccapurple; */
+    padding-top: 8vh;
 }
 
 /* Title projects */
@@ -9,13 +11,13 @@
 .project-entete {
   text-align: center;
   width: 100%;
-  padding-top: 2%;
+  padding-top: 5vh;
   color: var(--font-color);
   margin-bottom: 7vh;
 }
 
 .project-entete h2 {
-  font-size: 4em;
+  font-size: 4vw;
   font-weight: 300;
   font-family: 'Yeseva One', serif;
   margin: 0;
