--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -7,17 +7,28 @@
 
 .navbar-portfolio {
   background-color: var(--background-color);
+  /* background-color: blue; */
+  /* display: flex; */
+  /* width: 100%; */
+  /* justify-content: center;
+  align-items: center;
+  text-align: center; */
+  /* gap: 10%; */
+  /* height: 8vh; */
+}
+
+.screen {
   display: flex;
   width: 100%;
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 10%;
+  /* background-color: aqua; */
   height: 8vh;
-  /* box-shadow: rgba(149, 157, 165, 0.1) 0px 8px 24px; */
+  gap: 10%;
 }
 
-.navbar-portfolio a {
+.button-link {
   text-decoration: none;
   color: var(--font-color);
   display: flex;
@@ -27,10 +38,31 @@
   height: 100%;
   width: 5%;
   transition: .2s ease-in-out;
-  /* background-color: rebeccapurple; */
 }
 
-.navbar-portfolio a:hover {
+.button-link:hover {
   transform: scale(1.15);
   color: #000000;
+}
+
+.hamburger {
+  /* background-color: aquamarine; */
+  display: none;
+}
+
+@media (max-width: 420px) {
+  .navbar-portfolio {
+    background-color: transparent;
+  }
+
+  .screen {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+    justify-content: end;
+    padding: 20px;
+    /* background-color: red; */
+  }
 }
