--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -37,14 +37,15 @@
 }
 
 .hamburger {
-  /* background-color: aquamarine; */
   display: none;
 }
 
 .hamburger-icon {
   position: absolute;
+  display: flex;
   margin: 20px;
-  z-index: 801;
+  z-index: 802;
+  /* background-color: aqua; */
 }
 
 .dropdown-menu {
@@ -54,35 +55,48 @@
   text-align: center;
   align-items: center;
   background-color: var(--background-color);
-  opacity: 0;
+  opacity: 1;
   position: absolute;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
   padding: 0;
   border: 0;
   height: 0;
   width: 100%;
-  z-index: 800;
   transition: all .4s ease-in-out;
+  z-index: 800;
 }
 
 .open {
   opacity: 1;
-  height: 30vh;
+  height: 40vh;
+  padding-top: 8.5vh;
 }
 
 @media (max-width: 420px) {
   .topnav {
-    z-index: 801;
+    z-index: 10001;
+    height: auto;
+    position: relative;
   }
 
   .navbar-portfolio {
-    background-color: transparent;
+    background-color: none;
   }
 
   .button-link {
-    border-bottom: 0.5px black solid;
+    border-top: 0.5px black solid;
+    width: 0;
+    font-size: 0vw;
+    transition: .5s ease-in-out;
+    opacity: 0;
+  }
+
+  .show {
     width: 100%;
-    height: 10vh;
+    font-size: 4vw;
+    opacity: 1;
+    transition: .1s ease-in-out;
+    height: 100%;
   }
 
   .screen {
@@ -93,5 +107,6 @@
     display: flex;
     position: relative;
     justify-content: end;
+    z-index: 801;
   }
 }
