--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -41,11 +41,7 @@
 }
 
 .hamburger-icon {
-  position: absolute;
-  display: flex;
-  margin: 20px;
   z-index: 802;
-  /* background-color: aqua; */
 }
 
 .dropdown-menu {
@@ -69,7 +65,27 @@
 .open {
   opacity: 1;
   height: 40vh;
-  padding-top: 8.5vh;
+  padding-top: 8vh;
+}
+
+.navline {
+  background-color: var(--background-color);
+  width: 100%;
+  height: 8vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 3vh;
+  padding-right: 3vh;
+  z-index: 802;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.04);
+}
+
+.navline p {
+  margin: 0;
+  font-family: 'Yeseva One', serif;
+  z-index: 802;
+  line-height: 1;
 }
 
 @media (max-width: 420px) {
@@ -106,7 +122,7 @@
   .hamburger {
     display: flex;
     position: relative;
-    justify-content: end;
+    justify-content: space-between;
     z-index: 801;
   }
 }
